defining basic colour scheme

--- a/railway.cabal
+++ b/railway.cabal
@@ -16,7 +16,13 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
+  build-depends:
+      base >= 4.7 && < 5
+    , colour >=2.3
+    , diagrams >=1.4
+    , diagrams-core >=1.4
+    , diagrams-lib >=1.4
+    , diagrams-svg >=1.4
   default-language:    Haskell2010
 
 source-repository head
