--- a/railway.cabal
+++ b/railway.cabal
@@ -25,6 +25,15 @@ library
     , diagrams-svg >=1.4
   default-language:    Haskell2010
 
+executable railway
+  hs-source-dirs:      src
+  main-is: Main.hs
+  default-language:    Haskell2010
+  build-depends:
+      base >= 4.7 && < 5
+    , diagrams >=1.4
+    , railway
+
 source-repository head
   type:     git
   location: https://github.com/hapytex/railway
